# nlp-project

./: GEMINI.md  pyproject.toml
configs/: train.yaml
configs/callbacks/: default.yaml
configs/data/: conllu.yaml
configs/logger/: wandb.yaml
configs/model/: dependency_parser.yaml
scripts/: analyze_conllu.py
src/: train.py
src/data/: conllu_parser.py  dataset.py
src/models/: UD_dependency_parser.py  dependency_parser_module.py
